// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer Create Spacer with {"height": "10px"} 1`] = `
<div
  style="height: 10px;"
/>
`;

exports[`Spacer Create Spacer with {"width": "20px"} 1`] = `
<div
  style="width: 20px;"
/>
`;

exports[`Spacer Create Spacer with {} 1`] = `<div />`;
